--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,40 +1,28 @@
-serenity.browser.maximized= true
+serenity.browser.maximized = true
 
 serenity {
-  encoding = "UTF-8"
-  compress.filenames = true
-  take.screenshots = FOR_EACH_ACTION
-  webdriver.timeouts.implicitlywait = 15000
-  test.root = starter
-  compress.filenames = false
+    take.screenshots = FOR_FAILURES
 }
 
-
-
-webdriver{
-  driver= chrome
-  autodownload= false
-  chrome.driver= "src/test/resources/chromedriver.exe"
-  capabilities{
-    "goog:chromeOptions"{
+webdriver {
+  driver = chrome
+  autodownload = false
+  chrome.driver = "src/test/resources/drivers/chromedriver.exe"
+  capabilities {
+    "goog:chromeOptions" {
       prefs {
-            download.default_directory = ""
-            download.prompt_for_download = false
-            profile.default_content_setting_values.automatic_downloads = 1
-            profile.default_content_settings.popups = 0
+        download.default_directory = ""
+        download.prompt_for_download = false
+        profile.default_content_setting_values.automatic_downloads = 1
+        profile.default_content_settings.popups = 0
       }
-
-      args=["start-maximized","lang=es","remote-allow-origins=*"]
+      args = ["start-maximized", "lang=es", "remote-allow-origins=*"]
     }
-
   }
 }
-environments {
-  default {
-    webdriver.base.url = "https://cnnespanol.cnn.com/"
-  }
-   default {
-        webdriver.map.url = "https://cnnespanol.cnn.com/"
-      }
 
-   }
+environments {
+  prod {
+    webdriver.base.url = "https://jqueryui.com/datepicker/"
+  }
+}
