--- a/serenity.properties
+++ b/serenity.properties
@@ -1,1 +1,1 @@
-serenity.project.name=Prueba técnica automatización - Ingeniero de automatización
+serenity.project.name = Automatización - Reto técnico
