--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,28 +1,23 @@
-serenity.browser.maximized = true
-
+# serenity.conf
 serenity {
-    take.screenshots = FOR_FAILURES
+    maintain.session = false                   # No comparte sesión entre escenarios
+    restart.browser.for.each = "scenario"     # Cada escenario (cada fila) abre su propio navegador
+    concurrent = true                          # Habilita ejecución paralela
+    threads = 4                                # Número de hilos paralelos
 }
 
 webdriver {
-  driver = chrome
-  autodownload = false
-  chrome.driver = "src/test/resources/drivers/chromedriver.exe"
-  capabilities {
-    "goog:chromeOptions" {
-      prefs {
-        download.default_directory = ""
-        download.prompt_for_download = false
-        profile.default_content_setting_values.automatic_downloads = 1
-        profile.default_content_settings.popups = 0
-      }
-      args = ["start-maximized", "lang=es", "remote-allow-origins=*"]
+    driver = chrome
+    autodownload = true
+    capabilities {
+        "goog:chromeOptions" {
+            args = ["start-maximized","lang=es","remote-allow-origins=*"]
+        }
     }
-  }
 }
 
 environments {
-  prod {
-    webdriver.base.url = "https://jqueryui.com/datepicker/"
-  }
+    prod {
+        webdriver.base.url = "https://demo.testim.io/"
+    }
 }
