--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 buildscript {
-    ext.serenityCoreVersion = '3.3.0'
+    ext {
+        serenityCoreVersion = '3.3.4'
+    }
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath("net.serenity-bdd:serenity-gradle-plugin:$serenityCoreVersion")
-        classpath "net.serenity-bdd:serenity-single-page-report:$serenityCoreVersion"
+        classpath("net.serenity-bdd:serenity-single-page-report:$serenityCoreVersion")
     }
-
 }
 
 plugins {
@@ -16,9 +17,6 @@ plugins {
     id 'eclipse'
     id 'idea'
 }
-
-
-
 
 defaultTasks 'clean','test','aggregate'
 apply plugin: 'net.serenity-bdd.serenity-gradle-plugin'
@@ -38,44 +36,61 @@ repositories {
 
 ext {
     slf4jVersion = '1.7.7'
-    serenityCoreVersion = '3.3.4'
-    serenityCucumberVersion = '3.3.4'
-    junitVersion = '5.8.2'
+    serenityCucumberVersion = '3.3.4' // versión compatible con Serenity Core 3.3.4
+    junitVersion = '4.13.2'
     assertJVersion = '3.22.0'
-    logbackVersion = '1.2.10'
+    logbackVersion = '1.5.13'
     lombokVersion = '1.18.22'
     log4jVersion = '2.17.1'
 }
 
 dependencies {
-    testImplementation ("net.serenity-bdd:serenity-core:${serenityCoreVersion}"){
+    // Serenity Core
+    testImplementation("net.serenity-bdd:serenity-core:${serenityCoreVersion}") {
         exclude group: 'org.apache.groovy', module: 'groovy'
     }
-    implementation "net.serenity-bdd:serenity-ensure:${serenityCoreVersion}"
-    implementation "net.serenity-bdd:serenity-junit5:${serenityCoreVersion}"
-    implementation "net.serenity-bdd:serenity-cucumber:${serenityCucumberVersion}"
+
+    // Serenity + JUnit 4
+    testImplementation "net.serenity-bdd:serenity-junit:${serenityCoreVersion}"
+
+    // Serenity Cucumber compatible con JUnit 4
+    testImplementation "net.serenity-bdd:serenity-cucumber:${serenityCucumberVersion}"
+
+    // Screenplay
     implementation "net.serenity-bdd:serenity-screenplay:${serenityCoreVersion}"
     implementation "net.serenity-bdd:serenity-screenplay-webdriver:${serenityCoreVersion}"
     implementation "net.serenity-bdd:serenity-screenplay-rest:${serenityCoreVersion}"
 
-    implementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
-    implementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
-    implementation "org.assertj:assertj-core:${assertJVersion}"
-    implementation "ch.qos.logback:logback-classic:${logbackVersion}"
-    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.27'
+    // JUnit 4
+    testImplementation "junit:junit:${junitVersion}"
 
+    // AssertJ
+    implementation "org.assertj:assertj-core:${assertJVersion}"
+
+    // Lombok
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
     testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
-    implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
+}
 
-}
 test {
-    useJUnitPlatform()
-    testLogging.showStandardStreams = true
-    systemProperties System.getProperties()
+    // JUnit 4 no necesita useJUnitPlatform()
+    maxParallelForks = 4       // Número de procesos paralelos
+    forkEvery = 1              // Reinicia fork por cada prueba
+
+    testLogging {
+        events "passed", "skipped", "failed"
+        showStandardStreams = true
+    }
 }
+
+task deployReportToNetlify(type: Exec) {
+    description = 'Sube el reporte Serenity a Netlify automáticamente'
+    workingDir = projectDir
+    commandLine 'cmd', '/c', 'netlify deploy --prod --dir=target/site/serenity'
+}
+
 
 serenity {
     testRoot = "co.com.screenplay.project.runners"
@@ -85,4 +100,4 @@ serenity {
 
 gradle.startParameter.continueOnFailure = true
 test.finalizedBy(aggregate)
-
+aggregate.finalizedBy(deployReportToNetlify)
